--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login_page"
-    android:padding="20dp">
+    android:padding="20dp"
+    tools:context=".Login_page">
 
 
     <TextView
@@ -27,183 +27,73 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
         android:layout_marginTop="36dp"
-        android:text="Please enter mobile number for verification "
+        android:text="Enter Email and Passwordto Login "
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="normal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/linearLayoutCompat"
         android:layout_width="350dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/textView6">
 
         <EditText
-            android:id="@+id/enter_no"
+            android:id="@+id/EmailEditext"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:background="@drawable/otp_editbox"
             android:padding="10dp"
-            android:text="+91"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:layout_marginBottom="20dp"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
 
 
+
+
+
+    <EditText
+        android:id="@+id/PasswordEditext"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:background="@drawable/otp_editbox"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:inputType="textPassword"
+        android:hint="Password"
+        android:textAlignment="textStart"
+        android:layout_marginBottom="20dp"
+
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="281dp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/SubmitButton"
+            android:layout_width="105dp"
+            android:layout_height="49dp"
+            android:background="@color/black"
+            android:text="submit"
+            android:layout_gravity="center"
+            android:textColor="@color/white"
+            android:textSize="18dp"
+            tools:layout_editor_absoluteX="124dp"
+            tools:layout_editor_absoluteY="372dp" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/submit_num"
-        android:layout_width="105dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="64dp"
-        android:background="@color/black"
-        android:text="submit"
-        android:textColor="@color/white"
-        android:textSize="18dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        android:paddingStart="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/Next_to_verification"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/submit_num"
-        app:layout_constraintVertical_bias="0.595">
-
-
-        <EditText
-            android:id="@+id/otp_edit_box1"
-            android:layout_width="40dp"
-            android:layout_height="55dp"
-
-            android:layout_weight="1"
-            android:background="@drawable/otp_editbox"
-            android:gravity="center"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="30sp"
-            tools:layout_editor_absoluteX="64dp"
-            tools:layout_editor_absoluteY="238dp" />
-
-        <EditText
-            android:id="@+id/otp_edit_box2"
-            android:layout_width="40dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="8dp"
-            android:layout_weight="1"
-            android:background="@drawable/otp_editbox"
-            android:gravity="center"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="30sp"
-            tools:layout_editor_absoluteX="290dp"
-            tools:layout_editor_absoluteY="238dp" />
-
-        <EditText
-            android:id="@+id/otp_edit_box3"
-            android:layout_width="40dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="8dp"
-            android:layout_weight="1"
-            android:background="@drawable/otp_editbox"
-            android:gravity="center"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="30sp"
-            tools:layout_editor_absoluteX="141dp"
-            tools:layout_editor_absoluteY="238dp" />
-
-        <EditText
-            android:id="@+id/otp_edit_box4"
-            android:layout_width="40dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="8dp"
-            android:layout_weight="1"
-            android:background="@drawable/otp_editbox"
-            android:gravity="center"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="30sp"
-            tools:layout_editor_absoluteX="213dp"
-            tools:layout_editor_absoluteY="238dp" />
-
-        <EditText
-            android:id="@+id/otp_edit_box5"
-            android:layout_width="40dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="8dp"
-            android:layout_weight="1"
-            android:background="@drawable/otp_editbox"
-            android:gravity="center"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="30sp"
-            tools:layout_editor_absoluteX="213dp"
-            tools:layout_editor_absoluteY="238dp" />
-
-        <EditText
-            android:id="@+id/otp_edit_box6"
-            android:layout_width="40dp"
-            android:layout_height="55dp"
-            android:layout_marginLeft="8dp"
-            android:layout_weight="1"
-            android:background="@drawable/otp_editbox"
-            android:gravity="center"
-            android:inputType="number"
-            android:maxLength="1"
-            android:textSize="30sp"
-            tools:layout_editor_absoluteX="213dp"
-            tools:layout_editor_absoluteY="238dp" />
-
-
-    </LinearLayout>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/Next_to_verification"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="104dp"
-        android:background="@drawable/ic_baseline_arrow_circle_up_24"
-        android:backgroundTint="@color/black"
-        android:rotation="90"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
-    <TextView
-        android:id="@+id/register_page_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="if you are new Register here"
-        android:textColor="#5C5858"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Next_to_verification" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
