--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -28,6 +28,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,6 +46,20 @@
 
             tools:layout_editor_absoluteX="32dp"
             tools:layout_editor_absoluteY="24dp" />
+
+        <ImageView
+            android:id="@+id/ChatImageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="center"
+            android:layout_marginLeft="170dp"
+            android:src="@drawable/ic_baseline_chat_24" />
+
+    </LinearLayout>
+
+
+
 
         <TextView
             android:id="@+id/UsernameTextview"
