--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -51,15 +52,12 @@
             android:id="@+id/ChatImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:layout_marginLeft="170dp"
             android:src="@drawable/ic_baseline_chat_24" />
 
     </LinearLayout>
-
-
-
 
         <TextView
             android:id="@+id/UsernameTextview"
@@ -123,7 +121,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardView2"
+            android:id="@+id/ResultCardView"
             android:layout_width="150dp"
             android:layout_height="160dp"
             android:layout_marginLeft="10dp"
@@ -323,7 +321,5 @@
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
